# path-tracing

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cc  camera.h  color.h  hit.cc  hit.h  image.cc  image.h  interpreter.h  main-mpi.cc  main.cc  material.cc  material.h  object.h  random.cc  random.h  ray.cc  ray.h  sphere.cc  sphere.h  timer.h  tracer.cc  tracer.h  vector3d.cc  vector3d.h
